# r2-copilot

./: .gitignore  Contributing  README.en.md  README.md  SECURITY.md  main.py  pyproject.toml  start.sh
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  pr.yaml  python-app.yml  release-drafter.yml
src/r2_copilot/: main.py
src/r2_copilot/crypto/: __init__.py  constants.py
src/r2_copilot/models/: schemas.py
src/r2_copilot/server/: __init__.py  instance.py
src/r2_copilot/tools/: analysis.py  binary_info.py  config.py  crypto_detection.py  debugger.py  disassembly.py  flags.py  navigation.py  search.py  session_tools.py  write.py
src/r2_copilot/utils/: r2_manager.py
src/radare2_mcp/: server.py
src/radare2_mcp/models/: schemas.py
src/radare2_mcp/tools/: analysis.py  binary_info.py  config.py  debugger.py  disassembly.py  flags.py  navigation.py  search.py  write.py
src/radare2_mcp/utils/: r2_manager.py
tests/: conftest.py  test_integration.py  test_r2_manager.py  test_server.py
tests/test_tools/: test_analysis.py  test_binary_info.py  test_config.py  test_flags.py  test_navigation.py  test_search.py  test_write.py
